--- a/tools/chmmaker/chmsitemapeditor.lfm
+++ b/tools/chmmaker/chmsitemapeditor.lfm
@@ -1,214 +1,216 @@
 object SitemapEditForm: TSitemapEditForm
-  Left = 289
-  Height = 651
-  Top = 161
-  Width = 773
+  Left = 298
+  Height = 814
+  Top = 87
+  Width = 966
   ActiveControl = SitemapTree
   Caption = 'Sitemap Editor'
-  ClientHeight = 651
-  ClientWidth = 773
+  ClientHeight = 814
+  ClientWidth = 966
+  DesignTimePPI = 120
   ShowInTaskBar = stAlways
-  LCLVersion = '4.99.0.0'
+  LCLVersion = '3.2.0.0'
   object Label3: TLabel
-    Left = 424
-    Height = 15
-    Top = 16
-    Width = 90
+    Left = 530
+    Height = 20
+    Top = 20
+    Width = 115
     Caption = 'Global Properties'
   end
   object Label4: TLabel
-    Left = 444
-    Height = 15
-    Top = 136
-    Width = 94
+    Left = 555
+    Height = 20
+    Top = 170
+    Width = 117
     Caption = 'Foreground Color'
   end
   object Label5: TLabel
-    Left = 444
-    Height = 15
-    Top = 176
-    Width = 96
+    Left = 555
+    Height = 20
+    Top = 220
+    Width = 119
     Caption = 'Background Color'
   end
   object ForegroundClrBtn: TColorButton
-    Left = 600
-    Height = 25
-    Top = 131
-    Width = 75
+    Left = 750
+    Height = 31
+    Top = 164
+    Width = 94
     BorderWidth = 2
-    ButtonColorSize = 16
+    ButtonColorSize = 20
     ButtonColor = clBlack
   end
   object BackgroundClrBtn: TColorButton
-    Left = 600
-    Height = 25
-    Top = 171
-    Width = 75
+    Left = 750
+    Height = 31
+    Top = 214
+    Width = 94
     BorderWidth = 2
-    ButtonColorSize = 16
+    ButtonColorSize = 20
     ButtonColor = clNone
   end
   object GroupBox1: TGroupBox
     Left = 0
-    Height = 651
+    Height = 814
     Top = 0
-    Width = 404
+    Width = 505
     Align = alLeft
     Caption = 'Sitemap Tree/List'
-    ClientHeight = 631
-    ClientWidth = 400
+    ClientHeight = 789
+    ClientWidth = 501
     TabOrder = 0
     object Label1: TLabel
-      Left = 11
-      Height = 15
-      Top = 467
-      Width = 98
+      Left = 14
+      Height = 20
+      Top = 584
+      Width = 120
       Caption = 'Local link (in chm)'
       Enabled = False
     end
     object Label2: TLabel
-      Left = 11
-      Height = 15
-      Top = 575
-      Width = 49
+      Left = 14
+      Height = 20
+      Top = 719
+      Width = 62
       Caption = 'Add Item'
     end
     object SitemapTree: TTreeView
       Left = 0
-      Height = 405
+      Height = 506
       Top = 0
-      Width = 400
+      Width = 501
       Align = alTop
       HideSelection = False
       ReadOnly = True
       TabOrder = 0
-      Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
       OnCustomCreateItem = SitemapTreeCustomCreateItem
       OnSelectionChanged = SitemapTreeSelectionChanged
+      Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
     end
     object DescriptionEdit: TLabeledEdit
-      Left = 11
-      Height = 23
-      Top = 435
-      Width = 292
-      EditLabel.Height = 15
-      EditLabel.Width = 292
+      Left = 14
+      Height = 28
+      Top = 544
+      Width = 365
+      EditLabel.Height = 20
+      EditLabel.Width = 365
       EditLabel.Caption = 'Description'
       Enabled = False
       TabOrder = 1
       OnChange = DescriptionEditChange
     end
     object DescFromTitleBtn: TButton
-      Left = 311
-      Height = 25
-      Top = 435
-      Width = 75
-      BorderSpacing.InnerBorder = 4
+      Left = 389
+      Height = 31
+      Top = 544
+      Width = 94
+      BorderSpacing.InnerBorder = 5
       Caption = 'From Title'
       Enabled = False
       TabOrder = 2
+      OnClick = DescFromTitleBtnClick
     end
     object LocalCombo: TComboBox
-      Left = 11
-      Height = 23
-      Top = 487
-      Width = 375
+      Left = 14
+      Height = 28
+      Top = 609
+      Width = 469
       Enabled = False
-      ItemHeight = 15
+      ItemHeight = 20
       TabOrder = 3
       OnChange = LocalComboChange
       OnKeyUp = LocalComboKeyUp
     end
     object URLEdit: TLabeledEdit
-      Left = 11
-      Height = 23
-      Top = 539
-      Width = 375
-      EditLabel.Height = 15
-      EditLabel.Width = 375
+      Left = 14
+      Height = 28
+      Top = 674
+      Width = 469
+      EditLabel.Height = 20
+      EditLabel.Width = 469
       EditLabel.Caption = 'URL (http)'
       Enabled = False
       TabOrder = 4
       OnChange = URLEditChange
     end
     object BeforeBtn: TButton
-      Left = 90
-      Height = 25
-      Top = 571
-      Width = 75
-      BorderSpacing.InnerBorder = 4
+      Left = 112
+      Height = 31
+      Top = 714
+      Width = 94
+      BorderSpacing.InnerBorder = 5
       Caption = 'Before'
       Enabled = False
       TabOrder = 5
       OnClick = BeforeBtnClick
     end
     object AfterBtn: TButton
-      Left = 170
-      Height = 25
-      Top = 571
-      Width = 75
-      BorderSpacing.InnerBorder = 4
+      Left = 212
+      Height = 31
+      Top = 714
+      Width = 94
+      BorderSpacing.InnerBorder = 5
       Caption = 'After'
       TabOrder = 6
       OnClick = AfterBtnClick
     end
     object SubItemBtn: TButton
-      Left = 90
-      Height = 25
-      Top = 601
-      Width = 155
-      BorderSpacing.InnerBorder = 4
+      Left = 112
+      Height = 31
+      Top = 751
+      Width = 194
+      BorderSpacing.InnerBorder = 5
       Caption = 'Subitem'
       Enabled = False
       TabOrder = 7
       OnClick = SubItemBtnClick
     end
     object DeleteBtn: TButton
-      Left = 11
-      Height = 25
-      Top = 601
-      Width = 75
-      BorderSpacing.InnerBorder = 4
+      Left = 14
+      Height = 31
+      Top = 751
+      Width = 94
+      BorderSpacing.InnerBorder = 5
       Caption = 'Delete'
       TabOrder = 8
       OnClick = DeleteBtnClick
     end
   end
   object FontEdit: TLabeledEdit
-    Left = 444
-    Height = 23
-    Top = 72
-    Width = 232
-    EditLabel.Height = 15
-    EditLabel.Width = 232
+    Left = 555
+    Height = 28
+    Top = 90
+    Width = 290
+    EditLabel.Height = 20
+    EditLabel.Width = 290
     EditLabel.Caption = 'Font'
     TabOrder = 1
   end
   object FolderViewCheck: TCheckBox
-    Left = 444
-    Height = 19
-    Top = 212
-    Width = 104
+    Left = 555
+    Height = 24
+    Top = 265
+    Width = 129
     Caption = 'Use Folder Icons'
     TabOrder = 2
   end
   object SaveBtn: TButton
-    Left = 560
-    Height = 25
-    Top = 616
-    Width = 75
-    BorderSpacing.InnerBorder = 4
+    Left = 700
+    Height = 31
+    Top = 770
+    Width = 94
+    BorderSpacing.InnerBorder = 5
     Caption = 'Save'
     ModalResult = 1
     TabOrder = 3
     OnClick = SaveBtnClick
   end
   object CancelBtn: TButton
-    Left = 652
-    Height = 25
-    Top = 616
-    Width = 75
-    BorderSpacing.InnerBorder = 4
+    Left = 815
+    Height = 31
+    Top = 770
+    Width = 94
+    BorderSpacing.InnerBorder = 5
     Caption = 'Cancel'
     ModalResult = 2
     TabOrder = 4
