tools/chmmaker: Add one more missing AutoSize.

--- a/tools/chmmaker/chmsitemapeditor.lfm
+++ b/tools/chmmaker/chmsitemapeditor.lfm
@@ -53,6 +53,7 @@ object SitemapEditForm: TSitemapEditForm
       Top = 200
       Width = 295
       Anchors = [akLeft, akRight, akBottom]
+      AutoSize = True
       BorderSpacing.Around = 6
       BevelOuter = bvNone
       ClientHeight = 150
